--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "mongoose": "^5.9.9",
     "morgan": "~1.9.1",
     "multer": "^1.4.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
