--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.9",
     "morgan": "~1.9.1",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "mysql": "^2.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
