--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "http-errors": "~1.6.3",
     "mongoose": "^5.9.9",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "svg-captcha": "^1.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
